# data-gpt

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  slack_bot.py  slack_bot_question.py  slack_bot_search.py  slack_bot_visualize.py
agents/: bigquery_agents.py
llm/: guidance_pipelines.py  models.py  queries.py
memory/: chromadb_memory.py
service/: context.py  document.py  execute.py  format.py  get.py  translate.py  update.py  util.py
